--- a/public/labs/a2/index.html
+++ b/public/labs/a2/index.html
@@ -23,12 +23,6 @@
     This is a paragraph. We often separate a long set of sentences with vertical spaces to make the text easier to read. Browsers ignore vertical white spaces and render all the text as one single set of sentences. To force the browser to add vertical spacing, wrap the paragraphs you want to separate with the paragraph tag
   </p>
 
-  This is the first paragraph. The paragraph tag is used to format vertical gaps between long pieces of text like this one.
-
-  This is the second paragraph. Even though we added a deliberate gap between the paragraph above and this paragraph, by default browsers render them as one contiguous piece of text as shown here on the right.
-
-  This is the third paragraph. Wrap each paragraph with the paragraph tag to tell browsers to render the gaps.
-
   <p>
     This is the first paragraph. The paragraph tag is used to format vertical gaps between long pieces of text like this one.
   </p>
@@ -39,13 +33,6 @@
     This is the third paragraph. Wrap each paragraph with the paragraph tag to tell browsers to render the gaps.
   </p>
 
-  <h2>List Tags</h2>
-  <h3>Ordered List Tag</h3>
-  How to join the 1%
-    1. Get a masters in computer science
-    2. Get a $100K+ starting salary job
-    3. Marry a like-minded engineer
-    4. Do great work for a decade
 
   <h2>List Tags</h2>
   <h3>Ordered List Tag</h3>
@@ -240,7 +227,7 @@
 
   Checkout my <a href="other-page.html">other page</a>
 
-  <hr>
+
 
   <h2>Table of content</h2>
 
@@ -253,15 +240,6 @@
     </li>
     <li>
       <a href="#embedding-slides">Embedding Google slides</a>
-    </li>
-    <li>
-      <a href="#drawing-rectangles">Drawing rectangles</a>
-    </li>
-    <li>
-      <a href="#drawing-circles">Drawing circles</a>
-    </li>
-    <li>
-      <a href="#drawing-polygons">Drawing polygons</a>
     </li>
 
   </ul>
@@ -297,13 +275,27 @@
           webkitallowfullscreen="true">
   </iframe>
 
+  <h2>Table of content</h2>
+
+  <ul>
+    <li>
+      <a href="#drawing-rectangles">Drawing rectangles</a>
+    </li>
+    <li>
+      <a href="#drawing-circles">Drawing circles</a>
+    </li>
+    <li>
+      <a href="#drawing-polygons">Drawing polygons</a>
+    </li>
+
+  </ul>
+
   <a name="drawing-rectangles"></a>
   <h2>Drawing rectangles</h2>
   <a href="#top">Top</a><br/>
   <svg width="300" height="100">
     <rect width="300" height="100"
-          style="fill:rgb(200,0,205); stroke-width:50;
-   stroke:rgb(0,0,0)" />
+          style="fill:rgb(200,0,205); stroke-width:50; stroke:rgb(0,0,0)" />
   </svg>
 
   <a name="drawing-circles"></a>
