--- a/public/tuiter/profile.html
+++ b/public/tuiter/profile.html
@@ -26,16 +26,15 @@
     @WebDev
 
     <p>
-        Hello Kitty, also known by her full name Kitty White, is a fictional character created by Yuko Shimizu,
-        currently designed by Yuko Yamaguchi, and owned by the Japanese company Sanrio.
+        Lego. AI and Space enthusiast, Web Polymath, used to hate Salsa and Merengue, but now desperately learning to play and dance
     </p>
 
     <p>
-        Joined Jan 2023
+        Joined Jan 2021
     </p>
 
     <p>
-        <b>10</b> Following <b>999999</b> Followers
+        <b>123</b> Following <b>234</b> Followers
     </p>
 
     <ul>
