--- a/public/tuiter/home.html
+++ b/public/tuiter/home.html
@@ -33,9 +33,7 @@
 
 
 
-    <button type="button">
-        <a href="tuit.html">Tuit</a>
-    </button>
+    <button type="button">Tuit</button>
 
     <hr>
 
