--- a/public/tuiter/tuit.html
+++ b/public/tuiter/tuit.html
@@ -30,9 +30,7 @@
 
     <input type="file"/>
 
-    <button type="button">
-        <a href="tuit.html">Tuit</a>
-    </button>
+    <button type="button">Tuit</button>
 
     <hr>
 
