--- a/public/canvas/index.html
+++ b/public/canvas/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css" />
     <meta charset="UTF-8">
     <!-- title appears as window title or tab -->
     <title>Canvas</title>
@@ -23,7 +24,7 @@
     </div>
 
     <div>
-      <h2>Course Navigator</h2>
+      <h2 class="bg-yellow">Course Navigator</h2>
       <ul>
         <li>Home</li>
         <li>Modules</li>
