--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -6,7 +6,7 @@
     <link href="../styles.css" rel="stylesheet" />
   </head>
 
-  <body class="wd-bg-color-black">
+  <body class="wd-bg-color-black wd-body">
     <div class="wd-head-content">
       <div class="wd-head-title">
         Bookmarks
@@ -23,26 +23,30 @@
       </div>
 
       <div class="wd-main-right">
-        <div>
+
           <div>
             <span class="wd-name-of-author">Hello Kitty</span>
             <span class="wd-handle">@hello_kitty007 · Jan 2</span>
             <span class="wd-three-dot-other">...</span>
           </div>
 
-          <div>
-            <p class="wd-main-content">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book. It has
-              survived not only five centuries, but also the leap into
-              electronic typesetting, remaining essentially unchanged. It was
-              popularised in the 1960s with the release of Letraset sheets
-              containing Lorem Ipsum passages, and more recently with desktop
-              publishing software like Aldus PageMaker including versions of
-              Lorem Ipsum.
-            </p>
+          <div class="wd-main-content-box">
+            <div class="wd-main-content">
+              <p>              Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy text
+                ever since the 1500s, when an unknown printer took a galley of
+                type and scrambled it to make a type specimen book. It has
+                survived not only five centuries, but also the leap into
+                electronic typesetting, remaining essentially unchanged. It was
+                popularised in the 1960s with the release of Letraset sheets
+                containing Lorem Ipsum passages, and more recently with desktop
+                publishing software like Aldus PageMaker including versions of
+                Lorem Ipsum.</p>
+
+
+            </div>
+
+
           </div>
 
           <div class="wd-main-image-box">
@@ -96,8 +100,17 @@
               />
             </span>
           </div>
-        </div>
+
       </div>
+
+
+
+
+
+
+
+
+
     </div>
 
     <div class="wd-main">
