--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -6,7 +6,7 @@
     <link href="index.css" rel="stylesheet" />
   </head>
 
-  <body class="wd-bg-color-black">
+  <body class="wd-bg-color-black wd-body">
     <div class="wd-part-A-B">
       <div class="wd-part-A">
         <div class="wd-part-A-left">
@@ -48,7 +48,7 @@
     <div class="wd-space"></div>
 
     <div class="wd-part-C">
-      <div><span class="wd-part-C-dot-1">...</span></div>
+      <div class="wd-part-C-dot-1"><span>...</span></div>
       <div class="wd-part-C-1">
         Trending in Science
         <span class="wd-part-C-dot-2">...</span>
