--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -27,7 +27,7 @@
           <div>
             <span class="wd-name-of-author">Hello Kitty</span>
             <span class="wd-handle">@hello_kitty007 · Jan 2</span>
-            <span class="wd-three-dot-other">...</span>
+
           </div>
 
           <div class="wd-main-content-box">
@@ -102,6 +102,8 @@
           </div>
 
       </div>
+
+      <div class="wd-three-dot-other"><span>...</span></div>
 
 
 
