--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -8,11 +8,13 @@
 
   <body class="wd-bg-color-black wd-body">
     <div class="wd-head-content">
-      <div class="wd-head-title">
-        Bookmarks
+      <div class="wd-head-left">
+        <div class="wd-head-title">Bookmarks</div>
+        <div class="wd-head-handle">@WebDev</div>
+      </div>
+      <div class="wd-head-right">
         <span class="wd-three-dot-highlight">...</span>
       </div>
-      <div class="wd-head-handle">@WebDev</div>
     </div>
 
     <div class="wd-main">
@@ -23,88 +25,93 @@
       </div>
 
       <div class="wd-main-right">
+        <div>
+          <span class="wd-name-of-author">Hello Kitty</span>
+          <span class="wd-handle">@hello_kitty007 · Jan 2</span>
+        </div>
 
+        <div class="wd-main-content-box">
+          <div class="wd-main-content">
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book. It has
+              survived not only five centuries, but also the leap into
+              electronic typesetting, remaining essentially unchanged. It was
+              popularised in the 1960s with the release of Letraset sheets
+              containing Lorem Ipsum passages, and more recently with desktop
+              publishing software like Aldus PageMaker including versions of
+              Lorem Ipsum.
+            </p>
+          </div>
+        </div>
+
+        <div class="wd-main-image-box">
+          <img class="wd-main-image" src="./hellokitty-image.jpeg" />
+          <div class="wd-text-below-main-image">
+            <b class="wd-text-below-main-image-title">
+              Where does it come from?
+            </b>
+
+            <p class="wd-text-below-main-image-content">
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old. Richard McClintock, a Latin
+              professor at Hampden-Sydney College in Virginia, looked up one of
+              the more obscure Latin words, consectetur, from a Lorem Ipsum
+              passage, and going through the cites of the word in classical
+              literature, discovered the undoubtable source. Lorem Ipsum comes
+              from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et
+              Malorum" (The Extremes of Good and Evil) by Cicero, written in 45
+              BC. This book is a treatise on the theory of ethics, very popular
+              during the Renaissance. The first line of Lorem Ipsum, "Lorem
+              ipsum dolor sit amet..", comes from a line in section 1.10.32.
+            </p>
+            <div>
+              <img class="wd-link-icon-size" src="./link-icon.png" />
+              <span class="wd-link-icon">hello_kitty007.com</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="wd-tail-icon-box">
           <div>
-            <span class="wd-name-of-author">Hello Kitty</span>
-            <span class="wd-handle">@hello_kitty007 · Jan 2</span>
-
-          </div>
-
-          <div class="wd-main-content-box">
-            <div class="wd-main-content">
-              <p>              Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard dummy text
-                ever since the 1500s, when an unknown printer took a galley of
-                type and scrambled it to make a type specimen book. It has
-                survived not only five centuries, but also the leap into
-                electronic typesetting, remaining essentially unchanged. It was
-                popularised in the 1960s with the release of Letraset sheets
-                containing Lorem Ipsum passages, and more recently with desktop
-                publishing software like Aldus PageMaker including versions of
-                Lorem Ipsum.</p>
-
-
-            </div>
-
-
-          </div>
-
-          <div class="wd-main-image-box">
-            <img class="wd-main-image" src="./hellokitty-image.jpeg" />
-            <div class="wd-text-below-main-image">
-              <b class="wd-text-below-main-image-title">
-                Where does it come from?
-              </b>
-
-              <p class="wd-text-below-main-image-content">
-                Contrary to popular belief, Lorem Ipsum is not simply random
-                text. It has roots in a piece of classical Latin literature from
-                45 BC, making it over 2000 years old. Richard McClintock, a
-                Latin professor at Hampden-Sydney College in Virginia, looked up
-                one of the more obscure Latin words, consectetur, from a Lorem
-                Ipsum passage, and going through the cites of the word in
-                classical literature, discovered the undoubtable source. Lorem
-                Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus
-                Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero,
-                written in 45 BC. This book is a treatise on the theory of
-                ethics, very popular during the Renaissance. The first line of
-                Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line
-                in section 1.10.32.
-              </p>
-              <div>
-                <img class="wd-link-icon-size" src="./link-icon.png" />
-                <span class="wd-link-icon">hello_kitty007.com</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="wd-tail-icon-box">
             <span class="wd-tail-text-icon">
               <img src="./reply-icon.png" width="15px" height="15px" />
             </span>
             <span class="wd-tail-text-number">66.6k</span>
+          </div>
+
+          <div>
             <span class="wd-tail-text-icon">
-              <img src="./retweet-icon.png" width="20px" height="20px" />
+              <img src="./retweet-icon.png" width="15px" height="15px" />
             </span>
             <span class="wd-tail-text-number">100k</span>
-            <span class="wd-tail-text-icon">
-              <img src="./like-icon.png" width="20px" height="20px" />
+          </div>
+
+          <div>
+            <span class="wd-tail-text-icon wd-heart-icon-red">
+              <img src="./like-icon.png" width="15px" height="15px" />
             </span>
-            <span class="wd-tail-text-number">188k</span>
+            <span class="wd-tail-text-number wd-tail-heart-number">188k</span>
+          </div>
+
+          <div>
             <span class="wd-tail-text-icon">
               <img
                 class="wd-share-icon"
                 src="./share-icon.png"
-                width="20px"
-                height="20px"
+                \
+                width="15px"
+                height="15px"
               />
             </span>
           </div>
-
+        </div>
       </div>
 
       <div class="wd-three-dot-other"><span>...</span></div>
-
     </div>
 
     <div class="wd-main">
@@ -115,16 +122,15 @@
       </div>
 
       <div class="wd-main-right">
-
         <div>
           <span class="wd-name-of-author">Cute Unicorn</span>
           <span class="wd-handle">@cute_unicorn · Jan 31</span>
-
         </div>
 
         <div class="wd-main-content-box">
           <div class="wd-main-content">
-            <p>              Lorem Ipsum is simply dummy text of the printing and typesetting
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
               industry. Lorem Ipsum has been the industry's standard dummy text
               ever since the 1500s, when an unknown printer took a galley of
               type and scrambled it to make a type specimen book. It has
@@ -133,12 +139,9 @@
               popularised in the 1960s with the release of Letraset sheets
               containing Lorem Ipsum passages, and more recently with desktop
               publishing software like Aldus PageMaker including versions of
-              Lorem Ipsum.</p>
-
-
+              Lorem Ipsum.
+            </p>
           </div>
-
-
         </div>
 
         <div class="wd-main-image-box">
@@ -149,19 +152,18 @@
             </b>
 
             <p class="wd-text-below-main-image-content">
-              Contrary to popular belief, Lorem Ipsum is not simply random
-              text. It has roots in a piece of classical Latin literature from
-              45 BC, making it over 2000 years old. Richard McClintock, a
-              Latin professor at Hampden-Sydney College in Virginia, looked up
-              one of the more obscure Latin words, consectetur, from a Lorem
-              Ipsum passage, and going through the cites of the word in
-              classical literature, discovered the undoubtable source. Lorem
-              Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus
-              Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero,
-              written in 45 BC. This book is a treatise on the theory of
-              ethics, very popular during the Renaissance. The first line of
-              Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line
-              in section 1.10.32.
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old. Richard McClintock, a Latin
+              professor at Hampden-Sydney College in Virginia, looked up one of
+              the more obscure Latin words, consectetur, from a Lorem Ipsum
+              passage, and going through the cites of the word in classical
+              literature, discovered the undoubtable source. Lorem Ipsum comes
+              from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et
+              Malorum" (The Extremes of Good and Evil) by Cicero, written in 45
+              BC. This book is a treatise on the theory of ethics, very popular
+              during the Renaissance. The first line of Lorem Ipsum, "Lorem
+              ipsum dolor sit amet..", comes from a line in section 1.10.32.
             </p>
             <div>
               <img class="wd-link-icon-size" src="./link-icon.png" />
@@ -171,32 +173,30 @@
         </div>
 
         <div class="wd-tail-icon-box">
-            <span class="wd-tail-text-icon">
-              <img src="./reply-icon.png" width="15px" height="15px" />
-            </span>
+          <span class="wd-tail-text-icon">
+            <img src="./reply-icon.png" width="15px" height="15px" />
+          </span>
           <span class="wd-tail-text-number">18k</span>
           <span class="wd-tail-text-icon">
-              <img src="./retweet-icon.png" width="20px" height="20px" />
-            </span>
+            <img src="./retweet-icon.png" width="20px" height="20px" />
+          </span>
           <span class="wd-tail-text-number">22.2k</span>
           <span class="wd-tail-text-icon">
-              <img src="./like-icon.png" width="20px" height="20px" />
-            </span>
+            <img src="./like-icon.png" width="20px" height="20px" />
+          </span>
           <span class="wd-tail-text-number">38.8k</span>
           <span class="wd-tail-text-icon">
-              <img
-                      class="wd-share-icon"
-                      src="./share-icon.png"
-                      width="20px"
-                      height="20px"
-              />
-            </span>
+            <img
+              class="wd-share-icon"
+              src="./share-icon.png"
+              width="20px"
+              height="20px"
+            />
+          </span>
         </div>
-
       </div>
 
       <div class="wd-three-dot-other"><span>...</span></div>
-
     </div>
 
     <div class="wd-main">
@@ -207,16 +207,15 @@
       </div>
 
       <div class="wd-main-right">
-
         <div>
           <span class="wd-name-of-author">CNN · News</span>
           <span class="wd-handle">@cnn_news · Jan 22</span>
-
         </div>
 
         <div class="wd-main-content-box">
           <div class="wd-main-content">
-            <p>              Lorem Ipsum is simply dummy text of the printing and typesetting
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
               industry. Lorem Ipsum has been the industry's standard dummy text
               ever since the 1500s, when an unknown printer took a galley of
               type and scrambled it to make a type specimen book. It has
@@ -225,12 +224,9 @@
               popularised in the 1960s with the release of Letraset sheets
               containing Lorem Ipsum passages, and more recently with desktop
               publishing software like Aldus PageMaker including versions of
-              Lorem Ipsum.</p>
-
-
+              Lorem Ipsum.
+            </p>
           </div>
-
-
         </div>
 
         <div class="wd-main-image-box">
@@ -241,19 +237,18 @@
             </b>
 
             <p class="wd-text-below-main-image-content">
-              Contrary to popular belief, Lorem Ipsum is not simply random
-              text. It has roots in a piece of classical Latin literature from
-              45 BC, making it over 2000 years old. Richard McClintock, a
-              Latin professor at Hampden-Sydney College in Virginia, looked up
-              one of the more obscure Latin words, consectetur, from a Lorem
-              Ipsum passage, and going through the cites of the word in
-              classical literature, discovered the undoubtable source. Lorem
-              Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus
-              Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero,
-              written in 45 BC. This book is a treatise on the theory of
-              ethics, very popular during the Renaissance. The first line of
-              Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line
-              in section 1.10.32.
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old. Richard McClintock, a Latin
+              professor at Hampden-Sydney College in Virginia, looked up one of
+              the more obscure Latin words, consectetur, from a Lorem Ipsum
+              passage, and going through the cites of the word in classical
+              literature, discovered the undoubtable source. Lorem Ipsum comes
+              from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et
+              Malorum" (The Extremes of Good and Evil) by Cicero, written in 45
+              BC. This book is a treatise on the theory of ethics, very popular
+              during the Renaissance. The first line of Lorem Ipsum, "Lorem
+              ipsum dolor sit amet..", comes from a line in section 1.10.32.
             </p>
             <div>
               <img class="wd-link-icon-size" src="./link-icon.png" />
@@ -263,33 +258,30 @@
         </div>
 
         <div class="wd-tail-icon-box">
-            <span class="wd-tail-text-icon">
-              <img src="./reply-icon.png" width="15px" height="15px" />
-            </span>
+          <span class="wd-tail-text-icon">
+            <img src="./reply-icon.png" width="15px" height="15px" />
+          </span>
           <span class="wd-tail-text-number">16.6k</span>
           <span class="wd-tail-text-icon">
-              <img src="./retweet-icon.png" width="20px" height="20px" />
-            </span>
+            <img src="./retweet-icon.png" width="20px" height="20px" />
+          </span>
           <span class="wd-tail-text-number">10.5k</span>
           <span class="wd-tail-text-icon">
-              <img src="./like-icon.png" width="20px" height="20px" />
-            </span>
+            <img src="./like-icon.png" width="20px" height="20px" />
+          </span>
           <span class="wd-tail-text-number">18.8k</span>
           <span class="wd-tail-text-icon">
-              <img
-                      class="wd-share-icon"
-                      src="./share-icon.png"
-                      width="20px"
-                      height="20px"
-              />
-            </span>
+            <img
+              class="wd-share-icon"
+              src="./share-icon.png"
+              width="20px"
+              height="20px"
+            />
+          </span>
         </div>
-
       </div>
 
       <div class="wd-three-dot-other"><span>...</span></div>
-
     </div>
-
   </body>
 </html>
