--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -10,11 +10,11 @@
     <div class="wd-part-A-B">
       <div class="wd-part-A">
         <div class="wd-part-A-left">
-          <div>
-            <img class="wd-search-icon" src="./search.png" />
+          <div class="wd-search-bar-container wd-bg-color-darkgrey">
+            <img class="wd-search-icon" src="./search-24.png" />
             <input
               type="text"
-              class="wd-search-bar wd-bg-color-darkgrey"
+              class="wd-search-bar"
               placeholder="Search Twitter"
             />
           </div>
