--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="wd-part-B">
-        <span class="wd-part-B-item wd-part-B-highligh"> For you </span>
+        <span class="wd-part-B-highligh"> For you </span>
 
         <span class="wd-part-B-item"> Trending </span>
 
