--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -78,30 +78,30 @@
         <div class="wd-tail-icon-box">
           <div>
             <span class="wd-tail-text-icon">
-              <img src="./reply-icon.png" width="15px" height="15px" />
+              <img src="./1.png" width="15px" height="15px" />
             </span>
-            <span class="wd-tail-text-number">66.6k</span>
+            <span class="wd-tail-text-number">66.6K</span>
           </div>
 
           <div>
             <span class="wd-tail-text-icon">
-              <img src="./retweet-icon.png" width="15px" height="15px" />
+              <img src="./2.png" width="15px" height="15px" />
             </span>
-            <span class="wd-tail-text-number">100k</span>
+            <span class="wd-tail-text-number">100K</span>
           </div>
 
           <div>
             <span class="wd-tail-text-icon wd-heart-icon-red">
               <img src="./like-icon.png" width="15px" height="15px" />
             </span>
-            <span class="wd-tail-text-number wd-tail-heart-number">188k</span>
+            <span class="wd-tail-text-number wd-tail-heart-number">188K</span>
           </div>
 
           <div>
             <span class="wd-tail-text-icon">
               <img
                 class="wd-share-icon"
-                src="./share-icon.png"
+                src="./3.png"
                 \
                 width="15px"
                 height="15px"
@@ -173,26 +173,38 @@
         </div>
 
         <div class="wd-tail-icon-box">
-          <span class="wd-tail-text-icon">
-            <img src="./reply-icon.png" width="15px" height="15px" />
-          </span>
-          <span class="wd-tail-text-number">18k</span>
-          <span class="wd-tail-text-icon">
-            <img src="./retweet-icon.png" width="20px" height="20px" />
-          </span>
-          <span class="wd-tail-text-number">22.2k</span>
-          <span class="wd-tail-text-icon">
-            <img src="./like-icon.png" width="20px" height="20px" />
-          </span>
-          <span class="wd-tail-text-number">38.8k</span>
-          <span class="wd-tail-text-icon">
-            <img
-              class="wd-share-icon"
-              src="./share-icon.png"
-              width="20px"
-              height="20px"
-            />
-          </span>
+          <div>
+            <span class="wd-tail-text-icon">
+              <img src="./1.png" width="15px" height="15px" />
+            </span>
+            <span class="wd-tail-text-number">106.5K</span>
+          </div>
+
+          <div>
+            <span class="wd-tail-text-icon">
+              <img src="./2.png" width="15px" height="15px" />
+            </span>
+            <span class="wd-tail-text-number">98.9K</span>
+          </div>
+
+          <div>
+            <span class="wd-tail-text-icon wd-heart-icon-red">
+              <img src="./like-icon.png" width="15px" height="15px" />
+            </span>
+            <span class="wd-tail-text-number wd-tail-heart-number">79.6K</span>
+          </div>
+
+          <div>
+            <span class="wd-tail-text-icon">
+              <img
+                class="wd-share-icon"
+                src="./3.png"
+                \
+                width="15px"
+                height="15px"
+              />
+            </span>
+          </div>
         </div>
       </div>
 
@@ -258,26 +270,38 @@
         </div>
 
         <div class="wd-tail-icon-box">
-          <span class="wd-tail-text-icon">
-            <img src="./reply-icon.png" width="15px" height="15px" />
-          </span>
-          <span class="wd-tail-text-number">16.6k</span>
-          <span class="wd-tail-text-icon">
-            <img src="./retweet-icon.png" width="20px" height="20px" />
-          </span>
-          <span class="wd-tail-text-number">10.5k</span>
-          <span class="wd-tail-text-icon">
-            <img src="./like-icon.png" width="20px" height="20px" />
-          </span>
-          <span class="wd-tail-text-number">18.8k</span>
-          <span class="wd-tail-text-icon">
-            <img
-              class="wd-share-icon"
-              src="./share-icon.png"
-              width="20px"
-              height="20px"
-            />
-          </span>
+          <div>
+            <span class="wd-tail-text-icon">
+              <img src="./1.png" width="15px" height="15px" />
+            </span>
+            <span class="wd-tail-text-number">6.6K</span>
+          </div>
+
+          <div>
+            <span class="wd-tail-text-icon">
+              <img src="./2.png" width="15px" height="15px" />
+            </span>
+            <span class="wd-tail-text-number">11.0K</span>
+          </div>
+
+          <div>
+            <span class="wd-tail-text-icon wd-heart-icon-red">
+              <img src="./like-icon.png" width="15px" height="15px" />
+            </span>
+            <span class="wd-tail-text-number wd-tail-heart-number">18.8K</span>
+          </div>
+
+          <div>
+            <span class="wd-tail-text-icon">
+              <img
+                class="wd-share-icon"
+                src="./3.png"
+                \
+                width="15px"
+                height="15px"
+              />
+            </span>
+          </div>
         </div>
       </div>
 
