--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -66,9 +66,9 @@
 
     <div class="wd-part-D">
       <div class="wd-part-D-left">
-        <img class="wd-part-D-left-1" src="./nyt-icon.png" />
+        <img class="wd-part-D-left-1" src="./11.png" />
         <span class="wd-part-D-left-2">The New York Times</span>
-        <img class="wd-part-D-left-3" src="./check.png" />
+        <img class="wd-part-D-left-3" src="./33.png" />
         <span class="wd-part-D-left-4"> · Yesterday</span>
         <div class="wd-part-D-left-5">
           CNN`s Cuomo conundrum: A star anchor with a brother in trouble
@@ -93,9 +93,9 @@
     </div>
     <div class="wd-part-D">
       <div class="wd-part-D-left">
-        <img class="wd-part-D-left-1" src="./bloomingberg.png" />
+        <img class="wd-part-D-left-1" src="./22.png" />
         <span class="wd-part-D-left-2">Bloomingberg Opinion</span>
-        <img class="wd-part-D-left-3" src="./check.png" />
+        <img class="wd-part-D-left-3" src="./33.png" />
         <span class="wd-part-D-left-4"> · Yesterday</span>
         <div class="wd-part-D-left-5">
           Thinking about getting a booster? Read this first.
