--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -167,7 +167,7 @@
             </p>
             <div>
               <img class="wd-link-icon-size" src="./link-icon.png" />
-              <span class="wd-link-icon">hello_kitty007.com</span>
+              <span class="wd-link-icon">cute-unicorn.com</span>
             </div>
           </div>
         </div>
@@ -264,7 +264,7 @@
             </p>
             <div>
               <img class="wd-link-icon-size" src="./link-icon.png" />
-              <span class="wd-link-icon">hello_kitty007.com</span>
+              <span class="wd-link-icon">cnn-news.com</span>
             </div>
           </div>
         </div>
