--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,15 @@
       <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
       <li><a href="labs/a3/index.html">Assignment 3 Labs</a></li>
       <li><a href="labs/a4/index.html">Assignment 4 Labs</a></li>
-      <li><a href="tuiter/navigation.html">Tuiter</a></li>
+      <li>
+        <a href="tuiter/explore/index-a4-tuiter.html">Assignment 4 Bootstrap</a>
+      </li>
+      <li>
+        <a href="tuiter/explore/index-a4-challenge.html"
+          >Assignment 4 Challenge</a
+        >
+      </li>
+      <li><a href="tuiter/navigation.html">Tuiter Project</a></li>
     </ul>
   </body>
 </html>
