--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
     <ul>
       <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
       <li><a href="labs/a3/index.html">Assignment 3 Labs</a></li>
+      <li>
+        <a href="tuiter/explore/index-a3-tuiter.html">Assignment 3 CSS</a>
+      </li>
       <li><a href="labs/a4/index.html">Assignment 4 Labs</a></li>
       <li>
         <a href="tuiter/explore/index-a4-tuiter.html">Assignment 4 Bootstrap</a>
