--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
       <li><a href="labs/a3/index.html">Assignment 3 Labs</a></li>
       <li>
-        <a href="tuiter/explore/index-a3-tuiter.html">Assignment 3 CSS</a>
+        <a href="tuiter/explore/index-a3.html">Assignment 3 CSS</a>
       </li>
       <li><a href="labs/a4/index.html">Assignment 4 Labs</a></li>
       <li>
