--- a/public/tuiter/explore/index-a4-tuiter.html
+++ b/public/tuiter/explore/index-a4-tuiter.html
@@ -454,7 +454,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./Virgin Galactic.svg"
+                      src="./Virgin Galactic.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1005,7 +1005,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./Virgin Galactic.svg"
+                      src="./Virgin Galactic.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -1557,7 +1557,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./Virgin Galactic.svg"
+                      src="./Virgin Galactic.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2110,7 +2110,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./Virgin Galactic.svg"
+                      src="./Virgin Galactic.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -2664,7 +2664,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./Virgin Galactic.svg"
+                      src="./Virgin Galactic.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
@@ -3216,7 +3216,7 @@
                 <div class="d-flex justify-content-start">
                   <div class="d-inline-flex col-2">
                     <img
-                      src="./Virgin Galactic.svg"
+                      src="./Virgin Galactic.png"
                       ,
                       class="rounded-circle"
                       alt="Rounded Image"
