--- a/public/index.html
+++ b/public/index.html
@@ -29,21 +29,23 @@
   <body>
     <h1>Web Dev Assignments</h1>
     <ul>
-      <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
-      <li><a href="labs/a3/index.html">Assignment 3 Labs</a></li>
+      <li><a href="/labs/a2/index.html">Assignment 2 Labs</a></li>
+      <li><a href="/labs/a3/index.html">Assignment 3 Labs</a></li>
       <li>
-        <a href="tuiter/explore/index-a3.html">Assignment 3 CSS</a>
+        <a href="/tuiter/explore/index-a3.html">Assignment 3 CSS</a>
       </li>
-      <li><a href="labs/a4/index.html">Assignment 4 Labs</a></li>
+      <li><a href="/labs/a4/index.html">Assignment 4 Labs</a></li>
       <li>
-        <a href="tuiter/explore/index-a4-tuiter.html">Assignment 4 Bootstrap</a>
+        <a href="/tuiter/explore/index-a4-tuiter.html"
+          >Assignment 4 Bootstrap</a
+        >
       </li>
       <li>
-        <a href="tuiter/explore/index-a4-challenge.html"
+        <a href="/tuiter/explore/index-a4-challenge.html"
           >Assignment 4 Challenge</a
         >
       </li>
-      <li><a href="tuiter/navigation.html">Tuiter Project</a></li>
+      <li><a href="/tuiter/navigation.html">Tuiter Project</a></li>
     </ul>
   </body>
 </html>
