--- a/public/tuiter/explore/index-a4-challenge.html
+++ b/public/tuiter/explore/index-a4-challenge.html
@@ -25,8 +25,8 @@
             <ul class="nav nav-tabs wd-no-border">
               <li id="bird" class="nav-item">
                 <a class="nav-link wd-text-black" href="#">
-                  <i class="fab fa-twitter" style="color: rgb(95, 190, 250)"></i
-                ></a>
+                  <img src="./blueT.png" class="wd-t-logo"
+                /></a>
               </li>
               <li id="home" class="nav-item">
                 <a class="nav-link wd-text-black" href="#">
@@ -152,11 +152,11 @@
                 </div>
 
                 <div id="for-you" class="mt-2">
-                  <ul class="nav nav-tabs justify-content-between">
-                    <li class="nav-item">
-                      <a class="nav-link active foryou" href="for-you.html"
-                        >For you</a
-                      >
+                  <ul
+                    class="nav wd-foryou-color nav-tabs justify-content-between"
+                  >
+                    <li class="nav-item wd-foryou">
+                      <a class="nav-link" href="for-you.html">For you</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-gray" href="trending.html"
@@ -513,8 +513,8 @@
             <ul class="nav nav-tabs wd-no-border">
               <li id="bird" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
-                  <i class="fab fa-twitter" style="color: rgb(95, 190, 250)"></i
-                ></a>
+                  <img src="./blueT.png" class="wd-t-logo"
+                /></a>
               </li>
               <li id="home" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
@@ -640,11 +640,11 @@
                 </div>
 
                 <div id="for-you" class="mt-2">
-                  <ul class="nav nav-tabs justify-content-between">
-                    <li class="nav-item">
-                      <a class="nav-link active foryou" href="for-you.html"
-                        >For you</a
-                      >
+                  <ul
+                    class="nav wd-foryou-color nav-tabs justify-content-between"
+                  >
+                    <li class="nav-item wd-foryou">
+                      <a class="nav-link" href="for-you.html">For you</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-gray" href="trending.html"
@@ -1001,8 +1001,8 @@
             <ul class="nav nav-tabs wd-no-border">
               <li id="bird" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
-                  <i class="fab fa-twitter" style="color: rgb(95, 190, 250)"></i
-                ></a>
+                  <img src="./blueT.png" class="wd-t-logo"
+                /></a>
               </li>
               <li id="home" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
@@ -1129,11 +1129,11 @@
                 </div>
 
                 <div id="for-you" class="mt-2">
-                  <ul class="nav nav-tabs justify-content-between">
-                    <li class="nav-item">
-                      <a class="nav-link active foryou" href="for-you.html"
-                        >For you</a
-                      >
+                  <ul
+                    class="nav wd-foryou-color nav-tabs justify-content-between"
+                  >
+                    <li class="nav-item wd-foryou">
+                      <a class="nav-link" href="for-you.html">For you</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-gray" href="trending.html"
@@ -1489,8 +1489,8 @@
             <ul class="nav nav-tabs wd-no-border">
               <li id="bird" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
-                  <i class="fab fa-twitter" style="color: rgb(95, 190, 250)"></i
-                ></a>
+                  <img src="./blueT.png" class="wd-t-logo"
+                /></a>
               </li>
               <li id="home" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
@@ -1617,11 +1617,11 @@
                 </div>
 
                 <div id="for-you" class="mt-2">
-                  <ul class="nav nav-tabs justify-content-between">
-                    <li class="nav-item">
-                      <a class="nav-link active foryou" href="for-you.html"
-                        >For you</a
-                      >
+                  <ul
+                    class="nav wd-foryou-color nav-tabs justify-content-between"
+                  >
+                    <li class="nav-item wd-foryou">
+                      <a class="nav-link" href="for-you.html">For you</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-gray" href="trending.html"
@@ -1977,8 +1977,8 @@
             <ul class="nav nav-tabs wd-no-border">
               <li id="bird" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
-                  <i class="fab fa-twitter" style="color: rgb(95, 190, 250)"></i
-                ></a>
+                  <img src="./blueT.png" class="wd-t-logo" />
+                </a>
               </li>
 
               <li id="home" class="nav-item wd-min-width">
@@ -2090,11 +2090,11 @@
                 </div>
 
                 <div id="for-you" class="mt-2">
-                  <ul class="nav nav-tabs justify-content-between">
-                    <li class="nav-item">
-                      <a class="nav-link active foryou" href="for-you.html"
-                        >For you</a
-                      >
+                  <ul
+                    class="nav wd-foryou-color nav-tabs justify-content-between"
+                  >
+                    <li class="nav-item wd-foryou">
+                      <a class="nav-link" href="for-you.html">For you</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-gray" href="trending.html"
@@ -2451,8 +2451,8 @@
             <ul class="nav nav-tabs wd-no-border">
               <li id="bird" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
-                  <i class="fab fa-twitter" style="color: rgb(95, 190, 250)"></i
-                ></a>
+                  <img src="./blueT.png" class="wd-t-logo"
+                /></a>
               </li>
               <li id="home" class="nav-item wd-min-width">
                 <a class="nav-link wd-text-black" href="#">
@@ -2563,11 +2563,11 @@
                 </div>
 
                 <div id="for-you" class="mt-2">
-                  <ul class="nav nav-tabs justify-content-between">
-                    <li class="nav-item">
-                      <a class="nav-link active foryou" href="for-you.html"
-                        >For you</a
-                      >
+                  <ul
+                    class="nav wd-foryou-color nav-tabs justify-content-between"
+                  >
+                    <li class="nav-item wd-foryou">
+                      <a class="nav-link" href="for-you.html">For you</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link text-gray" href="trending.html"
